線形方程式の解の効率的な検証に関する新たな補題を追加し、関連する図を挿入。$q_0$-CSPの構成に関する詳細を明確化し、文書全体の整合性を向上させるための修正を実施。PDFおよびSynctexファイルを更新し、BiberログとLaTeXmkデータベースを最新の状態に保つための調整を行った。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
                 "-e",
                 "$makeindex=q/upmendex %O -o %D %S/",
                 "-e",
-                "$dvipdf=q/dvipdfmx %O -o %D %S/",
+                "$dvipdf=q/dvipdfmx -V 7 %O -o %D %S/",
                 "-e",
                 "$emulate_aux = 1",
                 "-e",
